.k8s/gateway-api/gateway-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-service
spec:
  ports:
    - name: api
      port: 8000
      targetPort: 8000
  selector:
    app: gateway-api
    component: api
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway-api-virtual-service
spec:
  hosts:
    - gateway-api-service
  http:
    - route:
        - destination:
            host: gateway-api-service
            port:
              number: 8000
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: gateway-api-metrics-virtual-service
# spec:
#   hosts:
#     - gateway-api-metrics-service
#   http:
#     - route:
#         - destination:
#             host: gateway-api-service
#             port:
#               number: 8001
